--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             
 <div class="container">
     <div class="row">
-        <div class="col-6">
-            <h1>HELLO</h1>
+        <div class="hero">
+            <img src="./static/images/hero.png">
         </div>
     </div>
 </div>
