--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </header>
         <main class="main">
             
-<div class="container">
+<div class="">
     <div class="row">
         <div class="hero">
             <img src="./static/images/hero.png">
