--- a/team/index.html
+++ b/team/index.html
@@ -150,6 +150,18 @@
      
   </div>
 
+  <div class="team__together">
+    <h2 class="team__together__header">Ook werken in onze factory?</h2>
+
+    <div class="team__together__wrapper">
+       <p class="team__together__text">Kom eens langs om kennis te maken</p>
+    </div>
+
+    <a class="team__together__link">Contact
+     <img class="image--right"src="../static/images/icons/right.svg">
+    </a>
+  </div>
+
 </section>
         </main>
         <footer class="footer">
