--- a/work/index.html
+++ b/work/index.html
@@ -51,8 +51,7 @@
 <ul class="nav__list"><li class="nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="nav__list-item"><a href="/11tyio-boilerplate/services/">Services</a></li>
 <li class="nav__list-item nav__list-item--active"><a href="/11tyio-boilerplate/work/">Work</a></li>
-<li class="nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li>
-<li class="nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
+<li class="nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li></ul>
 </nav>
         </div>
     </div>
@@ -60,18 +59,20 @@
         <main class="main">
             
         </main>
-        <footer class="footer">
-    <div class="container">
-        <div class="row justify-content-between">
-            <section>
+        <footer>
+    <div class="container footer__high">
+        <section>
                 <nav class="footer-nav">
 <ul class="footer-nav__list"><li class="footer-nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/services/">Services</a></li>
 <li class="footer-nav__list-item footer-nav__list-item--active"><a href="/11tyio-boilerplate/work/">Work</a></li>
-<li class="footer-nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li>
-<li class="footer-nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
+<li class="footer-nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li></ul>
 </nav>
-            </section>
+        </section>
+    </div>
+    <div class= "footer">
+        <div class="row justify-content-between">
+            
         </div>
     </div>
 </footer>
