deploy: 638c92c3296730f7f927deea40b265d4a4f0dbb8

--- a/work/index.html
+++ b/work/index.html
@@ -51,7 +51,8 @@
 <ul class="nav__list"><li class="nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="nav__list-item"><a href="/11tyio-boilerplate/services/">Services</a></li>
 <li class="nav__list-item nav__list-item--active"><a href="/11tyio-boilerplate/work/">Work</a></li>
-<li class="nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li></ul>
+<li class="nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li>
+<li class="nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
 </nav>
         </div>
     </div>
@@ -66,7 +67,8 @@
 <ul class="footer-nav__list"><li class="footer-nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/services/">Services</a></li>
 <li class="footer-nav__list-item footer-nav__list-item--active"><a href="/11tyio-boilerplate/work/">Work</a></li>
-<li class="footer-nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li></ul>
+<li class="footer-nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li>
+<li class="footer-nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
 </nav>
         </section>
     </div>
