--- a/contact/index.html
+++ b/contact/index.html
@@ -86,6 +86,8 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    </div>
+
         </main>
         <footer>
     <div class="container footer__high">
