--- a/team/index.html
+++ b/team/index.html
@@ -59,19 +59,17 @@
 </header>
         <main class="main">
             
-
-<section class="team container">
-  <h1 class="team__header ">TEAM</h1>
 <section class="team custom-container">
 
-
+ <div class="team__wrapper">
+    <h2 class="team__wrapper__header">Team</h2>
+ </div>
   <div class="team__wrapper__text">
-    <p class="team__text">
-    Onze klantteams zijn gek van code, design en strategie. Vanuit onze factory in Rotterdam werken we samen met onze klanten aan de continue digitalisering van hun business.
-  </p>
+    <p class="team__wrapper__text__content">
+      Onze klantteams zijn gek van code, design en strategie. Vanuit onze factory in Rotterdam werken we samen met onze klanten aan de continue digitalisering van hun business.
+    </p>
   </div>
   
-
   <div class="team__image">
     
       <div  class="team__image__container">
