deploy: 9a3ca184e31cd35984161440833bb59aef8dc5ac

--- a/work/index.html
+++ b/work/index.html
@@ -44,7 +44,7 @@
         <div class="row justify-content-between">
             <h1 class="col logo">
                 <a href="/11tyio-boilerplate/" title="Back to the homepage of the the8gency">
-                    Inova
+                    <img class= "image--logo" src = "../static/images/inova.svg">
                 </a>
             </h1>
             <nav class="col nav">
