--- a/services/index.html
+++ b/services/index.html
@@ -135,6 +135,12 @@
         <footer>
     <div class="container footer__high">
         <section>
+                
+        </section>
+    </div>
+    <div class= "footer">
+        <div class="row justify-content-between">
+            <section class="container">
                 <nav class="footer-nav">
 <ul class="footer-nav__list"><li class="footer-nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="footer-nav__list-item footer-nav__list-item--active"><a href="/11tyio-boilerplate/services/">Services</a></li>
@@ -142,11 +148,7 @@
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
 </nav>
-        </section>
-    </div>
-    <div class= "footer">
-        <div class="row justify-content-between">
-            
+            </section>
         </div>
     </div>
 </footer>
