--- a/team/index.html
+++ b/team/index.html
@@ -66,7 +66,7 @@
  </div>
   <div class="team__wrapper__text">
     <p class="team__wrapper__text__content">
-      Onze klantteams zijn gek van code, design en strategie. Vanuit onze factory in Rotterdam werken we samen met onze klanten aan de continue digitalisering van hun business.
+      Onze klantteams zijn gek van code, design en strategie. Vanuit onze factory in Gent werken we samen met onze klanten aan de continue digitalisering van hun business.
     </p>
   </div>
   
@@ -163,6 +163,12 @@
         <footer>
     <div class="container footer__high">
         <section>
+                
+        </section>
+    </div>
+    <div class= "footer">
+        <div class="row justify-content-between">
+            <section class="container">
                 <nav class="footer-nav">
 <ul class="footer-nav__list"><li class="footer-nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/services/">Services</a></li>
@@ -170,11 +176,7 @@
 <li class="footer-nav__list-item footer-nav__list-item--active"><a href="/11tyio-boilerplate/team/">Team</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
 </nav>
-        </section>
-    </div>
-    <div class= "footer">
-        <div class="row justify-content-between">
-            
+            </section>
         </div>
     </div>
 </footer>
