--- a/work/index.html
+++ b/work/index.html
@@ -63,6 +63,12 @@
         <footer>
     <div class="container footer__high">
         <section>
+                
+        </section>
+    </div>
+    <div class= "footer">
+        <div class="row justify-content-between">
+            <section class="container">
                 <nav class="footer-nav">
 <ul class="footer-nav__list"><li class="footer-nav__list-item"><a href="/11tyio-boilerplate/">Home</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/services/">Services</a></li>
@@ -70,11 +76,7 @@
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/team/">Team</a></li>
 <li class="footer-nav__list-item"><a href="/11tyio-boilerplate/contact/">Contact</a></li></ul>
 </nav>
-        </section>
-    </div>
-    <div class= "footer">
-        <div class="row justify-content-between">
-            
+            </section>
         </div>
     </div>
 </footer>
