deploy: a405a205d10326fb2d1449ee5dff8b1db2dbeb4b

--- a/work/index.html
+++ b/work/index.html
@@ -59,6 +59,66 @@
 </header>
         <main class="main">
             
+<div class="cases container">
+  <div class="cases__text">
+    <h2 class = "cases__text__title">Cases</h2>
+  </div>
+</div>
+
+
+
+<div class="cases__element container">
+  <div class="cases__element__subtitle">
+    <a class = "cases__element__subtitle__content" href="https://soufieddin.github.io/p11/" target="_blank">Gentse Feesten</a>
+  </div>
+  <div class="row cases__element__item">
+    <div class="cases__element__item__img gf__img col-sm-12 col-lg-3">
+      <img src="../static/images/mobile.png"/>
+    </div>
+    <div class="cases__element__item__img gf__img col-sm-12 col-lg-4">
+      <img src="../static/images/ipad.png"/>
+    </div>
+    <div class="cases__element__item__img gf__img col-sm-12  col-lg-5">
+      <img src="../static/images/pc.png"/>
+    </div>
+  </div>
+</div>
+
+<div class="cases__element container">
+  <div class="cases__element__subtitle">
+    <a class = "cases__element__subtitle__content" href="https://soufieddin.github.io/p9/" target="_blank">Arne Quinze</a>
+  </div>
+  <div class="row cases__element__item">
+    <div class="cases__element__item__img gf__img col-sm-12 col-lg-3">
+      <img src="../static/images/aq-mobile.png"/>
+    </div>
+    <div class="cases__element__item__img gf__img col-sm-12 col-lg-4">
+      <img src="../static/images/aq-ipad.png"/>
+    </div>
+    <div class="cases__element__item__img gf__img col-sm-12  col-lg-5">
+      <img src="../static/images/aq-pc.png"/>
+    </div>
+  </div>
+</div>
+
+<div class="cases__element container">
+  <div class="cases__element__subtitle">
+    <a class = "cases__element__subtitle__content" href="https://soufieddin.github.io/p7/" target="_blank">Alivi</a>
+  </div>
+  <div class="row cases__element__item">
+    <div class="cases__element__item__img gf__img col-sm-12 col-lg-3">
+      <img src="../static/images/alivi-mobile.png"/>
+    </div>
+    <div class="cases__element__item__img gf__img col-sm-12 col-lg-4">
+      <img src="../static/images/alivi-ipad.png"/>
+    </div>
+    <div class="cases__element__item__img gf__img col-sm-12  col-lg-5">
+      <img src="../static/images/alivi-pc.png"/>
+    </div>
+  </div>
+</div>
+
+
         </main>
         <footer>
     
