deploy: a9182087b6e45bc6f3402a5ec8f3623783fa2bd6

--- a/work/index.html
+++ b/work/index.html
@@ -57,6 +57,7 @@
         </div>
     </div>
 </header>
+        <button class = "btn-to-top">To top</button>
         <main class="main">
             
 <div class="cases container">
