--- a/contact/index.html
+++ b/contact/index.html
@@ -57,6 +57,7 @@
         </div>
     </div>
 </header>
+        <button class = "btn-to-top">To top</button>
         <main class="main">
             
     <section class="Material-contact-section section-padding section-dark">
