--- a/services/index.html
+++ b/services/index.html
@@ -57,6 +57,7 @@
         </div>
     </div>
 </header>
+        <button class = "btn-to-top">To top</button>
         <main class="main">
                 <div class="home container">
       <div class="home__text">
