deploy: 644186edf2923fa0dd3f07481f339f614d5cf146

--- a/contact/index.html
+++ b/contact/index.html
@@ -61,7 +61,7 @@
         <button class = "btn-to-top">To top</button>
         <main class="main">
             
-    <section class="Material-contact-section section-padding section-dark">
+    <div class="Material-contact-section section-padding section-dark">
       <div class="container">
           <div class="row">
               <!-- Section Titile -->
