--- a/team/index.html
+++ b/team/index.html
@@ -61,7 +61,7 @@
         <button class = "btn-to-top">To top</button>
         <main class="main">
             
-<section class="team container">
+<div class="team container">
 
  <div class="team__wrapper">
     <h2 class="team__wrapper__header">Team</h2>
