deploy: 68c363ba65f5f92c6a49dfa35cabb1c15f8d4e29

--- a/contact/index.html
+++ b/contact/index.html
@@ -125,7 +125,10 @@
                   </form>
               </div>
           </div>
-          <div id="map"></div>
+          <div class="map">
+            <div id="map"></div>
+          </div>
+          
       </div>
     </section>
         </main>
