deploy: 688713dde7355955e4116033275fada11d93e971

--- a/work/11/index.html
+++ b/work/11/index.html
@@ -68,7 +68,7 @@
     <h2 class = "cases__text__title">Gent&#39;s Festivals site</h2>
   </div>
   <div class="cases__client">
-    <h6>Orderd by: The city of Gent</h6>
+    <h6>Client: The city of Gent</h6>
     <p>The Gentse Feesten &quot;The Ghent Festival&quot; is a music and theatre festival in the city of Ghent, Belgium. Besides stage events there are street acts such as mimes and buskers. The festival starts on the Friday before the third Sunday of July and lasts until and including the fourth Sunday of July. The date originally had no reference to July 21st, Belgium&#39;s national holiday, but that holiday is always included. The festival starts on &quot;the (Fri)day before the Saturday before July 21st&quot; and lasts ten days. The last day (always a Sunday) is known as de dag van de lege portemonnees (&quot;the day of the empty wallets&quot;) alluding to the fact that many people have spent their last penny at the festival and is seen by the people of Ghent as &quot;their&quot; day while visitors leave.</p>
     <blockquote>Tes iete op Pole Pole!</blockquote>
   </div>
