--- a/work/7/index.html
+++ b/work/7/index.html
@@ -67,7 +67,7 @@
     <h2 class = "cases__text__title">Webshop Alivi</h2>
   </div>
   <div class="cases__client">
-    <h6>Orderd by: Lieve Cortier</h6>
+    <h6>Client: Lieve Cortier</h6>
     <p>We zijn van nature geprogrammeerd om één te zijn met de natuur. Gelukkig zijn er bloemen die elke emotie en bijzonder moment nog intenser maken. Ik vind het een hele eer om een verbindende rol te kunnen spelen tussen de bloemen en het leven van mijn klanten.</p>
     <blockquote>Bloemen maken alles intenser</blockquote>
   </div>
