--- a/work/9/index.html
+++ b/work/9/index.html
@@ -68,7 +68,7 @@
     <h2 class = "cases__text__title">Biography and portfolio site</h2>
   </div>
   <div class="cases__client">
-    <h6>Orderd by: Arne Quinze Studio</h6>
+    <h6>Client: Arne Quinze Studio</h6>
     <p>Arne Quinze is a Belgian contemporary artist, painter and sculptor. His work involves everything from small drawings and paintings, medium-sized sculptures to massive installations. Quinze was born in Belgium in 1971 and currently lives and works in Sint-Martens-Latem, a town near the Belgian city of Ghent. His early career in the 1980s was as a graffiti artist. He always questioned the role of our cities and started his search for cities to become open air museums. His work quickly evolved from Street Art to Public Art with recurring themes as social interaction, urbanisation and diversity.</p>
     <blockquote>If only we could build our cities as balanced as nature&#39;s ecosystems...</blockquote>
   </div>
