deploy: c7e29344b9aa2796c8653752dcf2d3e9b5f4a068

--- a/work/7/index.html
+++ b/work/7/index.html
@@ -63,8 +63,7 @@
         <main class="main">
             <div class = "container">
   <div class="dropdown">
-      <button class="dropdown__btn btn--third">Other Features</button>
-
+      <button class="dropdown__btn btn--third">Other Projects</button>
       <div class="dropdown__links">
       
       
@@ -89,11 +88,18 @@
     <h2 class = "cases__text__title">Webshop Alivi</h2>
   </div>
   <div class="cases__client">
-    <h6>Client: Lieve Cortier</h6>
-    <p>We zijn van nature geprogrammeerd om één te zijn met de natuur. Gelukkig zijn er bloemen die elke emotie en bijzonder moment nog intenser maken. Ik vind het een hele eer om een verbindende rol te kunnen spelen tussen de bloemen en het leven van mijn klanten.</p>
-    <blockquote>Bloemen maken alles intenser</blockquote>
+    <div class = "row">
+      <div class = "cases__client__about col-md-6 col-sm-12">
+        <h6>Client: Lieve Cortier</h6>
+        <p>We zijn van nature geprogrammeerd om één te zijn met de natuur. Gelukkig zijn er bloemen die elke emotie en bijzonder moment nog intenser maken. Ik vind het een hele eer om een verbindende rol te kunnen spelen tussen de bloemen en het leven van mijn klanten.</p>
+      </div>
+      <div class = "cases__client__review col-md-6 col-sm-12">
+        <q>Bijzonder tevreden over de diensten van INOVA. Het all-in concept zorgt voor een volledige ontzorging van alle marketing kanalen. Bovendien zorgt een goede rapportage voor een goed overzicht van de resultaten.</q>
+        <h6><cite>_Lieve Cortier</cite></h6>
+      </div>
+    </div>
   </div>
-  <p>Bijzonder tevreden over de diensten van INOVA. Het all-in concept zorgt voor een volledige ontzorging van alle marketing kanalen. Bovendien zorgt een goede rapportage voor een goed overzicht van de resultaten.</p>
+  
 </div>
 <div class="cases__element container">
   <div class="cases__element__subtitle">
