deploy: 84a5389fd69a4e8c2e7d7843076cdf0b6d85fea0

--- a/work/index.html
+++ b/work/index.html
@@ -72,7 +72,7 @@
                     <img src='../static/images/11.svg' class="card-img-top image--card" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Gent&#39;s Festivals site</h5>
-                        <h6 class="card-title">Ordered by: The city of Gent</h6>
+                        <h6 class="card-title">Client: The city of Gent</h6>
 
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <img src='../static/images/7.svg' class="card-img-top image--card" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Webshop Alivi</h5>
-                        <h6 class="card-title">Ordered by: Lieve Cortier</h6>
+                        <h6 class="card-title">Client: Lieve Cortier</h6>
 
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <img src='../static/images/9.svg' class="card-img-top image--card" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Biography and portfolio site</h5>
-                        <h6 class="card-title">Ordered by: Arne Quinze Studio</h6>
+                        <h6 class="card-title">Client: Arne Quinze Studio</h6>
 
                     </div>
                 </div>
