--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
             
 <section class="home">
     <div class="container">
-        <div class="home__text">
-            <h2 class = "home__text__title">Full-service partner of ambitious companies</h2>
-        </div>
-        <p class = "home__text__text">INOVA is a digital product studio. We create digital products and platforms for companies who are bold in the pursuit of their digital future. INOVA shapes the companies of tomorrow in the areas of marketing, strategy, communication and technology. Our team of product designers, engineers, strategists, architects and data scientists is eager and ready to accelerate your business.</p>
-        <div class="container">
+        <div class="">
             <div class="row">
-                <div class="home__img col-12">
-                    <img class="img-fluid" src="static/images/hero.png">
+                <div class="home__img ">
+                    <video class="col-12" autoplay muted loop id="myVideo">
+                        <source src="./static/images/main.mp4" type="video/mp4">
+                    </video>
+                    <div class="home__img__text">
+                        <p class = "onSmall">INOVA is a full-service partner of ambitious companies</p>
+                        <h2 class = "onBig">Full-service partner of ambitious companies</h2>
+                        <p class = "onBig">INOVA is a digital product studio. We create digital products and platforms for companies who are bold in the pursuit of their digital future. INOVA shapes the companies of tomorrow in the areas of marketing, strategy, communication and technology. Our team of product designers, engineers, strategists, architects and data scientists is eager and ready to accelerate your business.</p>
+                    </div>
                 </div>
             </div>
         </div>
