--- a/work/7/index.html
+++ b/work/7/index.html
@@ -94,7 +94,7 @@
         <p>We zijn van nature geprogrammeerd om één te zijn met de natuur. Gelukkig zijn er bloemen die elke emotie en bijzonder moment nog intenser maken. Ik vind het een hele eer om een verbindende rol te kunnen spelen tussen de bloemen en het leven van mijn klanten.</p>
       </div>
       <div class = "cases__client__review col-md-6 col-sm-12">
-        <q>Bijzonder tevreden over de diensten van INOVA. Het all-in concept zorgt voor een volledige ontzorging van alle marketing kanalen. Bovendien zorgt een goede rapportage voor een goed overzicht van de resultaten.</q>
+        <q>INOVA is de ideale digitale partner! Fijne en duurzame samenwerking, ik ben super tevreden met mijn website en de service.</q>
         <h6><cite>_Lieve Cortier</cite></h6>
       </div>
     </div>
