--- a/work/9/index.html
+++ b/work/9/index.html
@@ -92,7 +92,7 @@
     <div class = "row">
       <div class = "cases__client__about col-md-6 col-sm-12">
         <h6>Client: Arne Quinze Studio</h6>
-        <p>Arne Quinze is a Belgian contemporary artist, painter and sculptor. His work involves everything from small drawings and paintings, medium-sized sculptures to massive installations. Quinze was born in Belgium in 1971 and currently lives and works in Sint-Martens-Latem, a town near the Belgian city of Ghent. His early career in the 1980s was as a graffiti artist. He always questioned the role of our cities and started his search for cities to become open air museums. His work quickly evolved from Street Art to Public Art with recurring themes as social interaction, urbanisation and diversity.</p>
+        <p>Arne Quinze is a Belgian contemporary artist, painter and sculptor. His work involves everything from small drawings and paintings, medium-sized sculptures to massive installations. His early career in the 1980s was as a graffiti artist. His work quickly evolved from Street Art to Public Art with recurring themes as social interaction, urbanisation and diversity.</p>
       </div>
       <div class = "cases__client__review col-md-6 col-sm-12">
         <q>Toppers die actief meedenken en meetbare resultaten neerzetten met &quot;real world&quot; impact!</q>
