deploy: 412ee1b7cbe98e4bbb1532af3ca9915f51d1605d

--- a/work/9/index.html
+++ b/work/9/index.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 <div class="cases container">
-  <img class = "image--client" src = "../../static/images/9.svg" />
+  <img class = "image--client" src = "../../static/images/9-light.svg" />
   <div class="cases__text">
     <h2 class = "cases__text__title">Biography and portfolio site</h2>
   </div>
