--- a/contact/index.html
+++ b/contact/index.html
@@ -86,7 +86,7 @@
                 </div>
                 
                 <div class="find-widget">
-                   Program: <a href="#">Mon to Sat: 09:30 - 17:00 </a>
+                   Program: Mon to Sat: 09:30 - 17:00
                 </div>
                  <div id="map"></div>
               </div>
