--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 </div>
             </a>
         
-            <a class="col home__projects__list__item" href="https://soufieddin.github.io/p9" target="_blank">
+            <a class="col home__projects__list__item" href="https://soufieddin.github.io/p9-light" target="_blank">
                 <div class="item home__projects__list__item__element card h-100">
-                    <img src='./static/images/9.svg' class="card-img-top image--card" alt="...">
+                    <img src='./static/images/9-light.svg' class="card-img-top image--card" alt="...">
                     <div class="card-body">
                         <p class="card-title">Responsive website for portfolio and biography of Arne Quinze</p>
                     </div>
@@ -169,7 +169,7 @@
         <div class="col">
             <div class="home__clients__list__item  card h-100">
                 <div class="home__projects__list__item__element extra">
-                    <img src="./static/images/uber.svg" class="card-img-top" alt="...">
+                    <img src="./static/images/uber-light.svg" class="card-img-top" alt="...">
                 </div> 
             </div>
         </div>
@@ -209,7 +209,7 @@
         <div class="col">
             <div class="home__clients__list__item  card h-100">
                 <div class="home__projects__list__item__element extra">
-                    <img src="./static/images/9.svg" class="card-img-top" alt="...">
+                    <img src="./static/images/9-light.svg" class="card-img-top" alt="...">
                 </div> 
             </div>
         </div>
