--- a/work/index.html
+++ b/work/index.html
@@ -107,7 +107,7 @@
         
             <a class="col home__projects__list__item" href="/digital-agency-digital-agency/work/9/" target="_blank">
                 <div class="item home__projects__list__item__element card h-100">
-                    <img src='../static/images/9.svg' class="card-img-top image--card" alt="...">
+                    <img src='../static/images/9-light.svg' class="card-img-top image--card" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Biography and portfolio site</h5>
                         <h6 class="card-title">Client: Arne Quinze Studio</h6>
