--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             </a>
         
-            <a class="col home__projects__list__item" href="https://soufieddin.github.io/p9-light" target="_blank">
+            <a class="col home__projects__list__item" href="https://soufieddin.github.io/p9" target="_blank">
                 <div class="item home__projects__list__item__element card h-100">
                     <img src='./static/images/9-light.svg' class="card-img-top image--card" alt="...">
                     <div class="card-body">
