--- a/work/index.html
+++ b/work/index.html
@@ -59,16 +59,16 @@
         </div>
     </div>
 </header>
-        <button class = "btn-to-top">To top</button>
         <main class="main">
-                <div class="home container">
+                <button class = "btn-to-top">To top</button>
+    <div class="home container">
         <div class="">
             <div class="row">
                 <div class="home__img ">
                     <video class="col-12" autoplay muted loop id="myVideo">
                         <source src="../static/images/work.mp4" type="video/mp4">
                     </video>
-                    <div class="home__img__text">
+                    <div class="home__img__text home__img__text--dark">
                         <h6 class = "onSmall">And when the client is happy, we are happy.</h6>
                         <h5 class = "onBig">Get closer than ever to your customers. So close that you tell them what they need well before they realize it themselves..</h5>
                         <h6 class = "onBig">__Steve Jobs</h6>
@@ -122,8 +122,6 @@
 
         </main>
         <footer>
-    
-         
     <div class= "footer">
         <div>
             <section class="container">
