--- a/contact/index.html
+++ b/contact/index.html
@@ -44,6 +44,11 @@
         <header class="header">    
     <div class="container-fluid">
         <div class="row justify-content-between">
+           <button class="burger" >
+                        <svg width="29" height="20" viewBox="0 0 29 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M29 4H0V0H29V4ZM29 8H0V12H29V8ZM29 16H0V20H29V16Z" fill="white"/>
+                        </svg>
+           </button>
             <h1 class="col logo">
                 <a href="/digital-agency-digital-agency/" title="Back to the homepage of the the8gency">
                     <img class= "image--logo" src = "../static/images/inova.svg">
@@ -118,7 +123,7 @@
                       </div>
                       <!-- Form Submit -->
                       <div class="form-submit mt-5">
-                          <button class="btn btn-common link--button" type="submit" id="form-submit"><i class="material-icons mdi mdi-message-outline"></i> Send Message</button>
+                          <button class="button--contact" type="submit" id="form-submit"><i class="material-icons mdi mdi-message-outline"></i> Send Message</button>
                           <div id="msgSubmit" class="h3 text-center hidden"></div>
                           <div class="clearfix"></div>
                       </div>
