deploy: 9c159ee060c3f93db4ac636a4a502ae922b26749

--- a/services/index.html
+++ b/services/index.html
@@ -65,6 +65,7 @@
     </div>
 </header>
         <main class="main">
+        <button class = "button--toTop">To top</button>
                 <div class="home container">
         <div class="">
             <div class="row">
@@ -81,7 +82,6 @@
             </div>
         </div>
     </div>
-    <button class = "btn-to-top">To top</button>
     <div class="home__us container">
         <div class="home__us__header">
             <h2 class="home__us__header__title">How it works</h2>
