--- a/work/index.html
+++ b/work/index.html
@@ -65,8 +65,8 @@
     </div>
 </header>
         <main class="main">
-                <button class = "btn-to-top">To top</button>
-    <div class="home container">
+        <button class = "button--toTop">To top</button>
+                <div class="home container">
         <div class="">
             <div class="row">
                 <div class="home__img ">
