--- a/contact/index.html
+++ b/contact/index.html
@@ -65,6 +65,7 @@
     </div>
 </header>
         <main class="main">
+        <button class = "button--toTop">To top</button>
             
     <section class="Material-contact-section section-padding section-dark">
       <div class="container">
