--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </div>
 </header>
         <main class="main">
-            <button class = "btn-to-top">To top</button>
-<section class="home">
+        <button class = "button--toTop">To top</button>
+            <section class="home">
     <div class="container">
         <div class="">
             <div class="row">
@@ -84,7 +84,7 @@
         </div>
         <div class="home__extra">
             <h2 class="home__extra__title">Experts in growth</h2>
-            <a class="home__projects__header__link link--btn" href="services/">Our Services
+            <a class="home__projects__header__link button--link" href="services/">Our Services
                 <img class="image--right"src="static/images/icons/right.svg">
             </a>
         </div>
