--- a/team/index.html
+++ b/team/index.html
@@ -65,8 +65,8 @@
     </div>
 </header>
         <main class="main">
-            <button class = "btn-to-top">To top</button>
-<div class="team container">
+        <button class = "button--toTop">To top</button>
+            <div class="team container">
 
  <div class="team__wrapper">
     <h2 class="team__wrapper__header">Team</h2>
