--- a/work/9/index.html
+++ b/work/9/index.html
@@ -65,6 +65,7 @@
     </div>
 </header>
         <main class="main">
+        <button class = "button--toTop">To top</button>
             
 <button class = "btn-to-top">To top</button>
 <div class = "container">
