deploy: 9e2ce1e0aebc622f570f66660091aec523a42644

--- a/work/index.html
+++ b/work/index.html
@@ -44,11 +44,6 @@
         <header class="header">    
     <div class="container-fluid">
         <div class="row justify-content-between">
-           <button class="burger" >
-                        <svg width="29" height="20" viewBox="0 0 29 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M29 4H0V0H29V4ZM29 8H0V12H29V8ZM29 16H0V20H29V16Z" fill="white"/>
-                        </svg>
-           </button>
             <h1 class="col logo">
                 <a href="/digital-agency-digital-agency/" title="Back to the homepage of the the8gency">
                     <img class= "image--logo" src = "../static/images/inova.svg">
@@ -61,6 +56,27 @@
 <li class="nav__list-item"><a href="/digital-agency-digital-agency/team/">Team</a></li>
 <li class="nav__list-item"><a href="/digital-agency-digital-agency/contact/">Contact</a></li></ul>
 </nav>
+              <button class="button--burger" >
+                        <svg width="29" height="20" viewBox="0 0 29 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M29 4H0V0H29V4ZM29 8H0V12H29V8ZM29 16H0V20H29V16Z" fill="white"/>
+                        </svg>
+             </button>
+            <div class="my-modal">
+                <div class="modal-content">
+                   <nav class="footer-nav col-sm-12">
+<ul class="footer-nav__list"><li class="footer-nav__list-item"><a href="/digital-agency-digital-agency/">Home</a></li>
+<li class="footer-nav__list-item"><a href="/digital-agency-digital-agency/services/">Services</a></li>
+<li class="footer-nav__list-item footer-nav__list-item--active"><a href="/digital-agency-digital-agency/work/">Work</a></li>
+<li class="footer-nav__list-item"><a href="/digital-agency-digital-agency/team/">Team</a></li>
+<li class="footer-nav__list-item"><a href="/digital-agency-digital-agency/contact/">Contact</a></li></ul>
+</nav>
+                    <button class="button--close" >
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M24 20.188L15.685 11.979L23.885 3.697L20.188 0L11.976 8.318L3.666 0.115L0 3.781L8.321 12.021L0.115 20.334L3.781 24L12.018 15.682L20.303 23.885L24 20.188Z" fill="white"/>
+                        </svg> 
+                    </button>             
+                </div>
+            </div>
         </div>
     </div>
 </header>
